we set the body to have a display: flex to center the wrapper content; we use overflow-x: hidden to make sure the user can't scroll along the x-axis, keeping everything stuck at center; adjust the height and width of the form, card and button elements to conform to our new width sizing

--- a/scss/layout/_body.scss
+++ b/scss/layout/_body.scss
@@ -3,6 +3,8 @@
 
 body    {
     font-family: variables.$font-stack;
+    display: flex;
+    justify-content: center;
 
     @include mixins.layout('mobile'){
         // make sure the img goes after the red so it shows up on top of the color
